# Attendence_generator_enum

./: .gitignore  CHANGELOG.md  DEVELOPMENT_GUIDE.md  LICENSE  MANUAL.md  README.md  attendance_generator_v7.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
attendance_generator/: __init__.py  builders.py  cli.py  config.py  excel_qc.py  generator.py  helpers.py  loaders.py  pipeline.py  wizard.py
notebooks/: usage_notebook.ipynb
tests/: test_helpers.py  test_loaders.py  test_pipeline.py  test_wizard.py
